Only display recent data, continuously moving and clipping.

--- a/client/main.css
+++ b/client/main.css
@@ -14,8 +14,12 @@ body {
     display: none;
 }
 
-.line {
+.line path{
     fill: none;
     stroke: steelblue;
     stroke-width: 5px;
+}
+
+.subplot {
+    clip-path: url(#clip);
 }
